--- a/ExSet3_Sol.tex
+++ b/ExSet3_Sol.tex
@@ -32,8 +32,8 @@
  %\usepackage{epic}
 % \usepackage{eepic}
 % \usepackage{fancybox}
-\newcommand{\bsnul}{{\boldsymbol 0}}
-\newcommand{\cNN}{{\mathcal {NN}}}
+
+
 
 \usepackage{graphicx}
 \usepackage{epstopdf}
@@ -63,12 +63,12 @@
 \definecolor{ao}{rgb}{0.0, 0.5, 0.0}
 
 %Edit colors
-\newcommand{\CS}[1]{{\color{magenta}{#1}}}
-\newcommand{\ra}[1]{{\color{blue}{#1}}}
-\newcommand{\fh}[1]{{\color{cyan}{#1}}}
-\newcommand{\todo}[1]{{\color{red}[#1]}}
 
-\newcommand{\com}[1]{{\color{red} [#1]}}
+
+
+
+
+
 
 %\usepackage{fancyhdr}
 %\usepackage{datetime}
@@ -109,24 +109,16 @@
 \newcommand{\snorm}[1]{\left \lvert #1 \right \rvert}
 
 %fields, mathbb operators
-\newcommand{\IR}{\mathbb{R}}
-\newcommand{\IC}{\mathbb{C}}
-\newcommand{\IZ}{\mathbb{Z}}
-\newcommand{\IQ}{\mathbb{Q}}
-\newcommand{\IN}{\mathbb{N}}
-\newcommand{\IT}{\mathbb{T}}
+\mathbb{R}
+
 
 % Boundary Integral Operators
-\newcommand{\OV}{\mathsf{V}}
-\newcommand{\OK}{\mathsf{K}}
-\newcommand{\OW}{\mathsf{W}}
 % 
 
 %
 %\DeclareMathOperator*{\argmax}{arg\,max}
 %\DeclareMathOperator*{\argmin}{arg\,min}
 
-\newcommand{\OA}{\mathsf{A}}
 \newcommand{\Id}{\mathsf{Id}}
 \newcommand{{\D}}{\normalfont{\text{D}}}
 \newcommand{{\G}}{\normalfont{\text{G}}}
