--- a/exercise00_background_and_characteristics.tex
+++ b/exercise00_background_and_characteristics.tex
@@ -3,13 +3,17 @@
 \usepackage{graphicx}
 \usepackage[margin=2cm]{geometry}
 
+\usepackage{subcaption}
+\usepackage{mathtools}
 \usepackage{amsfonts}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{amsthm}
 \newcommand{\dif}[1][]{\mathrm{d} {#1}\,}
 \newcommand{\rb}[1]{ \left(  {#1} \right) }
 \newcommand{\frb}[1]{ \left(  {#1} \right) }
 
+% \usepackage[amsmath,thmmarks,standard]{ntheorem}
 \newtheoremstyle{break}
 {\topsep}
 {\topsep}%
@@ -25,18 +29,43 @@
 \newtheorem{solution}{Solution}
 \newtheorem*{solutioninformation}{Solution Information}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-%========================================================================
-\title{Background and characteristics}
-\date{}
-
 \begin{document}
 
+\title{Characteristics and Weak solutions}
+\date{}
+
 \maketitle
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
